# boost-log-sample

./: CMakeLists.txt  README.rst
src/: log.cpp  log.hpp  main.cpp
